<resources>
    <string name="app_name">王者荣耀助手</string>
    <string name="menu_des_logo">Logo</string>
    <string name="menu_hint_search">英雄、装备、技能...</string>
    <string name="menu_des_search">Search</string>
    <string name="menu_herolist">HeroList</string>
    <string name="menu_text_hero">英雄</string>
    <string name="menu_weapon">Weapon</string>
    <string name="menu_text_weapon">装备</string>
    <string name="menu_text_skill">技能</string>
    <string name="menu_text_collection">收藏</string>
    <string name="menu_item_filter">筛选</string>
    <string name="sort_title_1">综合</string>
    <string name="sort_all">全部</string>
    <string name="sort_new">新手推荐</string>
    <string name="sort_week">本周免费</string>
    <string name="sort_pos">定位</string>
    <string name="network_error">抱歉，我们遇到了一些问题，尝试联网或许可以解决，但是我们也不确定，:(</string>
    <string name="btn_ok">确定</string>
    <string name="sort_mode">模式</string>
    <string name="mode_special">边境突围</string>
    <string name="mode_normal">常规</string>
    <string name="item_magin">法术</string>
    <string name="item_defense">防御</string>
    <string name="item_auxiliary">辅助</string>
    <string name="item_jungle">打野</string>
    <string name="item_move">移动</string>
    <string name="item_equip">装备</string>
    <string name="item_prop">道具</string>
    <string name="item_skill">额外技能</string>
    <string name="item_attack">攻击</string>
    <string name="string_add_note">Add Note</string>
    <string name="note">备注</string>
    <string name="ok">OK</string>
    <string name="delete_collection">删除这个收藏</string>
    <string name="add_note">添加备注</string>
    <string name="skin">皮肤</string>
    <string name="todo">TODO</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="string_collect_nothing">这里并没有东西哟\n快去收藏一些吧😀</string>
    <string name="loading">看上去马上就加载完了哦</string>
    <string name="relation_partner">最佳伙伴</string>
    <string name="share">分享</string>
    <string name="preference">MyPreference</string>
</resources>
